Source/WebKit/chromium: [Chromium] Select multi-word misspelling on context click https://bugs.webkit.org/show_bug.cgi?id=108509

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-01-31
Reviewed by Tony Chang.

* src/ContextMenuClientImpl.cpp:
(WebKit):
(WebKit::selectMisspellingAsync): Added utility function to get the misspelling for asynchronous spellcheck.
(WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems): Select multi-word misspelling on context click.

Tools: [Chromium] Suggest 'uppercase' for multi-word misspelling 'upper case'
https://bugs.webkit.org/show_bug.cgi?id=108509

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-01-31
Reviewed by Tony Chang.

* DumpRenderTree/chromium/TestRunner/src/MockSpellCheck.cpp:
(append): Added utility function to append WebString to WebVector.
(MockSpellCheck::fillSuggestionList): Suggest 'uppercase' for misspelling 'upper case'.

LayoutTests: [Chromium] Expect spellcheck to select multi-word misspelling on context click
https://bugs.webkit.org/show_bug.cgi?id=108509

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-01-31
Reviewed by Tony Chang.

* editing/spelling/spelling-exactly-selected-multiple-words.html: Check spelling suggestion for multi-word misspelling.
* editing/spelling/spelling-should-select-multiple-words.html: Check spelling suggestion for multi-word misspelling.
* editing/spelling/spelling-exactly-selected-multiple-words-expected.txt:
* editing/spelling/spelling-should-select-multiple-words-expected.txt:
* platform/chromium/TestExpectations: Expect spellcheck to select multi-word misspelling on context click

Canonical link: https://commits.webkit.org/126785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141519 268f45cc-cd09-0410-ab3c-d52691b4dbfc